Added some final polishing